--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.10",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.10",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ngx-dropzone/cdk": "^17.2.0",
+    "@ngx-dropzone/material": "^17.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "firebase": "^10.6.0",
+    "ngx-dropzone": "^3.1.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -33,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "~5.1.3"
   }
 }
